Gave admin ability to view his own bookings through the none admin dashboard
